# AirWatcher

./: AirWatcher_use-case-diagram.mdj  README.md
app/: CMakeLists.txt  Cleaner.cpp  Cleaner.h  GovernmentAgency.cpp  GovernmentAgency.h  Makefile  Measurement.cpp  Measurement.h  PrivateUser.cpp  PrivateUser.h  README.md  Sensor.cpp  Sensor.h  Squelette.cpp  Squelette.h  User.cpp  User.h  main.cpp
app/AirWatcherTest/app/: CMakeLists.txt
app/AirWatcherTest/app/src/: main.cpp
app/AirWatcherTest/app/src/control/: Controller.cpp
app/AirWatcherTest/app/src/factory/: Reader.cpp  Reader.h
app/AirWatcherTest/app/src/model/: Cleaner.cpp  Date.cpp  Date.h  GovernmentAgency.cpp  GovernmentAgency.h  Measurement.cpp  Measurement.h  Model.cpp  PrivateUser.cpp  Sensor.cpp  Sensor.h  User.h
app/control/: Controller.cpp  Controller.h
app/factory/: Reader.cpp  Reader.h
app/model/: Attribute.cpp  Attribute.h  Cleaner.h  GovernmentAgency.cpp  GovernmentAgency.h  Measurement.cpp  Measurement.h  Model.cpp  PrivateUser.cpp  PrivateUser.h  Provider.cpp  Sensor.h  User.cpp  User.h
app/src/: main.cpp
app/src/control/: Controller.cpp  Controller.h
app/src/factory/: Reader.cpp  Reader.h
app/src/model/: Attribute.cpp  Attribute.h  Cleaner.cpp  Cleaner.h  Date.cpp  Date.h  GovernmentAgency.cpp  GovernmentAgency.h  Measurement.cpp  Measurement.h  Model.cpp  Model.h  PrivateUser.cpp  PrivateUser.h  Provider.cpp  Provider.h  Sensor.cpp  Sensor.h  User.cpp  User.h
app/src/ui/: UserInterface.cpp  UserInterface.h
app/test/: AttributeTest.cpp  AttributeTest.h  CleanerTest.cpp  CleanerTest.h  ControlerTest.cpp  ControllerTest.cpp  ControllerTest.h  DateTest.cpp  DateTest.h  MeasurementTest.cpp  MeasurementTest.h  PrivateUserTest.cpp  PrivateUserTest.h  ProviderTest.cpp  ProviderTest.h  ReaderTest.cpp  ReaderTest.h  SensorTest.cpp  SensorTest.h
app2/: CMakeLists.txt  README.md
app2/src/: main.cpp
app2/src/control/: Controller.cpp  Controller.h
app2/src/factory/: Reader.cpp  Reader.h
app2/src/model/: Attribute.cpp  Attribute.h  Cleaner.cpp  Cleaner.h  Date.cpp  Date.h  GovernmentAgency.cpp  GovernmentAgency.h  Measurement.cpp  Measurement.h  Model.cpp  Model.h  PrivateUser.cpp  PrivateUser.h  Provider.cpp  Provider.h  Sensor.cpp  Sensor.h  User.cpp  User.h
app2/src/user-interface/: UserInterface.cpp  UserInterface.h
app2/test/: ReaderTest.cpp  SensorTest.cpp  main.cpp
conception/: AirWatcher.mdj  class_diagramm.mdj  use_case.mdj
conception/backup/: DiagSeqUseCase3.mdj  sequence_diagram_ranking_sensors_similarity.mdj
dataset/tests/: dataToTestSensorRanked.csv  measurements.csv  measurements1.csv  sensorRanked.csv  sensors1.csv
planning/: .gitignore  Makefile  README.md  init.tex  macro.tji  main.tjp  resource.tji  task.tji  view.tji
planning/src/: task.tji  view.tji
planning/taskjuggler/: account.tji  macro.tji  main.tjp  resource.tji
specifications/: .gitignore  init.tex  srs.tex
